added s1.txt and s2.txt to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-<<<<<<< HEAD
-gtuyu
-yguygu
-gyguy
-huihu
-uguu
-gguhuh
-gghuihui
-huyu
-=======
-
->>>>>>> parent of 99a981a... added s1.txt to gitignore
+AP
+TS
+UP
+MAR
